--- a/estilos-home.css
+++ b/estilos-home.css
@@ -1,12 +1,12 @@
 body {
-  background-color: #3AAFA9;
+  background-color: #121212;
   font-family: 'Roboto', sans-serif;
 }
   
 
 
 #ficha {
-  background-color: cadetblue;
+  background-color: white;
   padding-left: 100px;
   padding-right: 100px;
 }
@@ -15,4 +15,32 @@ body {
   width: 250px;
   height: 250px;
   background-size: 250px 250px;
+}
+
+.contenedor-titulos{
+  text-align: center;
+  color: white;
+}
+
+.input-group{
+  width: 50%;
+}
+
+.contenedor-formulario{
+  display: flex;
+  justify-content: center;
+}
+
+.contendor-info{
+  display: flex;
+  justify-content: center;
+}
+
+.user-foto{
+
+}
+
+.info-user{
+  margin-left: 10%;
+  margin-top: 5%
 }
